--- a/index.html
+++ b/index.html
@@ -1,33 +1,65 @@
 <!DOCTYPE html>
-<html>
-	<head>
-		<meta charset="utf-8">
-		<标题></标题>
-	</head>
-	<内容>
-		<form action=""method="">
-			用户名:<input 类型="text"名字="user"size="30"/><br/>
-			密码:<input 类型="password"名字="passwd"size="30"/><br/>
-			性别:<input 类型="radio"名字="sex"vlaue="male"/>男
-			<input 类型="radio"名字="sex"vlaue="female"checked="checked"/>女<br/>
-			爱好:<input 类型="checkbox"名字="tech"value="swim"/>游泳
-			<input 类型="checkbox"名字="tech"value="read"/>读书
-			<input 类型="checkbox"名字="tech"value="movie"/>看电影
-			<input 类型="checkbox"名字="tech"value="game"/>玩游戏
-			<input 类型="checkbox"名字="tech"value="basketball"/>篮球
-			<input 类型="checkbox"名字="tech"value="weiqi"/>围棋<br/>
-		</form>
-		<form action=""method="post">
-			学历:
-			<select>
-				<option value="">——请选择学历——</option>
-				<option value="small">小学</option>
-				<option value="middle">中学</option>
-				<option value="big">大学</option>
-			</select><br />
-			生日:<input 类型="datetime-local"名字="bdaytime"/><br/>
-			自我介绍:<input 类型="text"名字="user"style="width:500px;height:200px"/><br/>
-			<input 类型="submit"/>&nbsp;&nbsp;<input 类型="reset"/>
-		</form>
-	</内容>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta 名字="viewport" content="width=device-width, initial-scale=1.0">
+    <标题>破竹之势</标题>
+	<link rel="stylesheet" href="css/new_file1.css">
+
+</head>
+
+<内容>
+    <div class="box">
+        <div class="box-top">
+            <div class="box-top-b">
+                <div class="box-top-bt">
+                    <img src="./img/000-00.jpg" alt="">
+                    <p><a href="#">破竹</a>之势</p>
+                </div>
+                <p>Breaking the trend of bamboo</p>
+            </div>
+            <ul class="bigul">
+                <li class="choose" id="bigli"><a href="first_page.html"  style="text-decoration: 无;color: #fff;" >网站首页</a>
+					<!-- <ul class="shouyeul">
+						<li class="shouyeli">简介</li>
+						<li class="shouyeli">风景名迹展示</li>
+						<li class="shouyeli">活动咨询</li>
+						<li class="shouyeli">非遗传承</li>
+					</ul> -->
+				</li>
+                <li class="choose"><a href="ours_page.html"  style="text-decoration: 无;color: #fff;" >关于我们</a></li>
+                <!-- <li class="choose"><a href="inherit_page.html"  style="text-decoration: none;color: #fff;" >竹编非遗传承人介绍</a></li> -->
+                <li class="choose"><a href="./chanping.html" style="text-decoration: 无;color: #fff;">竹编产品</a></li>
+                <li class="choose"><a href="community_page.html"  style="text-decoration: 无;color: #fff;" >竹编创意社区</a></li>
+                <li class="choose"><a href="tiyan_page.html"  style="text-decoration: 无;color: #fff;" >云上竹编体验</a></li>
+                <li class="choose"><a href="jidi_page.html"  style="text-decoration: 无;color: #fff;" >竹编生长基地</a></li>
+                <li class="choose"><a href="lianxi_our_page.html"  style="text-decoration: 无;color: #fff;" >联系我们</a></li>
+            </ul>
+            <span>中文/Engli</span>
+        </div>
+    </div>
+		<div class="son">
+			<img src="./img/shouye1.jpg" alt=""  id="animated-image">
+		</div>
+	<script src="./img/new_file.js"></script>
+	  <script>
+	    var imageIndex = 1; // 当前图片索引
+	    // 定时器，每隔3秒更换一次图片
+	    setInterval(changeImage, 4500);
+	    function changeImage() {
+	      var image = document.getElementById('animated-image');
+	      
+	      // 更换图片的逻辑
+	      if (imageIndex === 1) {
+	        image.src = './img/shouye1.jpg';
+	        imageIndex = 2;
+	      } else {
+	        image.src = './img/shouye2.jpg';
+	        imageIndex = 1;
+	      }
+	    }
+	  </script>
+</内容>
+
 </html>
